--- a/trunk/Monitor_Optimizer.tex
+++ b/trunk/Monitor_Optimizer.tex
@@ -1,19 +1,17 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \section{Monitor\_Optimizer: Optimization locations for the
-  Sour\-ce\_Op\-ti\-miz\-er component}
-\label{s:monitoroptimizer}
-
-This component was contributed by Emmanuel Farhi, Institute
-Laue-Langevin.
+  Source\_Optimizer component}
+\label{monitor-optimizer}
+\component{Source\_Optimizer}{E. Farhi}{optim\_comp}{$x_{min}$, $x_{max}$, $y_{min}$,$y_{max}$}{not fully validated}
 
 The {\bf Monitor\_Optimizer} component works with the {\bf
-  Source\_Optimizer} component. See section~\ref{s:sourceoptimizer}
+  Source\_Optimizer} component. See section~\ref{source-optimizer}
 for usage.
 
 The input parameters for {\bf Monitor\_Optimizer} are the rectangular
-shaped opening coordinates $x_{\rm min}, x_{\rm max}, y_{\rm min}$,
-$y_{\rm max}$ (in meters), and the name of the associated instance of
+shaped opening coordinates $x_{min}$, $x_{max}$, $y_{min}$,
+$y_{max}$ (in meters), and the name of the associated instance of
 the {\bf
   Source\_Optimizer} component used in the instrument description file (one word,
 without quotes).
