--- a/trunk/beamstop.tex
+++ b/trunk/beamstop.tex
@@ -1,7 +1,7 @@
 \section{Beamstop: A neutron absorbing area}
 \label{beamstop}
 
-\component{Beamstop}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $r$}{}
+\component{Beamstop}{System}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$, $r$}{}{}
 
 The component {\bf Beamstop} can be seen as the reverse of
 the {\bf Slit} component.
