--- a/trunk/chopper.tex
+++ b/trunk/chopper.tex
@@ -3,7 +3,7 @@
 \section{Chopper: The disc chopper}
 \label{s:chopper}
 
-\component{Chopper}{Phillipp Bernhardt}{$w$, $R$, $f$, $n$, $\phi$}{IsFirst, $n_{\rm pulse}$}
+\component{Chopper}{Phillipp Bernhardt}{$w$, $R$, $f$, $n$, $\phi$}{IsFirst, $n_{\rm pulse}$}{}
 
 To cut a continuous neutron beam into short pulses, or to control
 the pulse shape from a pulsed source, one can use a disc
@@ -23,7 +23,7 @@ rotation, which allows to simulate double choppers. You can also define
 the phase by setting the time at which one slit is positioned at the
 top. The sides of the slits are pointing towards the center of the disc.
 The thickness of the disc is neglected.  There is no parameter for the
-size of the slits in the radial direction; 
+size of the slits in the radial direction;
 use e.g. a {\bf Slit} component in front of the chopper.
 
 Using a rectangular shaped beam with nearly the same
@@ -33,17 +33,17 @@ transmission curve (see figure~\ref{f:chopper2}).
 \begin{figure}[ht]
 \includegraphics[width=1.0\linewidth]{figures/tracho.eps}
 \caption{example transmission curve for the disc chopper\label{f:chopper2}}
-\end{figure}    
+\end{figure}
 
 When simulating the chopping of a continuous beam,
 most of the neutrons could easily be lost.
 To improve efficiency, one can set the flag \verb+IsFirst+, which will
-allow every neutron ray to pass the {\bf Chopper}, but modify the 
-time, $t$, to a time at which it is possible to pass. 
+allow every neutron ray to pass the {\bf Chopper}, but modify the
+time, $t$, to a time at which it is possible to pass.
 This can also be used with TOF-instruments, which often
 define the starting time of the neutrons at
 the position of the first chopper.
 Of course, there should be only one ``first chopper'' in
 any simulation.
-To simulate frame overlap from a ``first chopper'', one can specify 
+To simulate frame overlap from a ``first chopper'', one can specify
 the number of frames to study by the parameter $n_{\rm pulse}$.
