--- a/trunk/comp.tex
+++ b/trunk/comp.tex
@@ -32,7 +32,7 @@ the neutron propagation axis, the $y$ axis is vertical up,
 and the $x$ completes the right-handed coordinate system.
 Most components 'position' (as specified in the instrument description with the \verb+AT+ keyword) corresponds to the input side of it. Some components are centered (e.g. radial components).
 
-Components are usually not designed to overlap. Warnings will be issued during simulation when no neutron can reach portions of the instrument, or neutrons are removed for computational reasons. This is usually the sign of either overlapping components or a very low intensity.
+Components are usually not designed to overlap. Warnings will be issued during simulation when no neutron can reach portions of the instrument, or neutrons are removed for computational reasons. This is usually the sign of either overlapping components or a very low intensity.\index{Removed neutron events}
 
 Source code for all components may be found in the \verb+lib/mcstas/+
 subdirectory of the McStas installation;
@@ -75,3 +75,4 @@ An overview of the component library is also given at the \MCS\ home page...
 \input{samples}
 \input{monitors}
 \input{misc}
+%\input{contrib}
