--- a/trunk/comp_removed.tex
+++ b/trunk/comp_removed.tex
@@ -1,11 +1,10 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\chapter{The component library}
+\chapter{The component library:Abstract}
 \label{s:components}
 \index{Library!Components|textbf}
 
-This chapter has been removed from the manual and will instead be published 
-in a separate manual describing the McStas components. The McStas component manualis edited by the McStas authors and it will include contributions from users writing components. As a complement to the \MCS\ component manual, you may use the \verb+mcdoc -s+ command to obtain the on-line component documentation and refer to the McStas web-page~\cite{mcstas_webpage} where all components are documented using the McDoc system.
+This chapter presents an abstract of existing components. As a complement to the \MCS\ component manual, you may use the \verb+mcdoc -s+ command to obtain the on-line component documentation and refer to the McStas web-page~\cite{mcstas_webpage} where all components are documented using the McDoc system.
 
 \section{A short overview of the \MCS\ component library}
 \label{s:comp-overview}
@@ -19,7 +18,7 @@ The \verb+contrib+ directory of the library contains components that were given 
 Additionally the \verb+obsolete+ directory of the library gathers components that were renamed, or considered to be outdated. Anyway, they still all work as before.
 \index{Library!Components!obsolete}
 
-The \verb+mcdoc+ front-end (section~\ref{s:mcdoc-run}) enables to display both the 
+The \verb+mcdoc+ front-end (section~\ref{s:mcdoc-run}) enables to display both the
 catalog of the \MCS\ library, e.g using: \index{Tools!mcdoc}
 \begin{quote}
   \verb|mcdoc --show|
@@ -47,14 +46,7 @@ Source\_Maxwell\_3 & Source with up to three Maxwellian distributions \\
 Source\_Optimizer & A component that optimizes the neutron flux passing through the Source\_Optimizer in order to have the maximum flux at the Monitor\_Optimizer position. \\
 Source\_adapt  &       Neutron source with adaptive importance sampling. \\
 Source\_div &          Neutron source with Gaussian divergence. \\
-Source\_flat &  A circular neutron source with flat energy spectrum and arbitrary flux.\\
-Source\_flat\_lambda & Neutron source with flat wavelength spectrum and
-arbitrary flux. \\
-Source\_flux         & An old variant of the official
-                      Source\_flux\_lambda component. \\
-Source\_flux\_lambda  & Neutron source with flat wavelength
-                      spectrum and 
-                      user-specified flux. \\
+Source\_simple &  A simple circular neutron source with flat energy/wavelength spectrum.\\
 Source\_gen     &    Circular/squared neutron source with flat or Maxwellian
                       energy/wavelength spectrum (possibly spatially
                       gaussian). \\
@@ -105,7 +97,7 @@ Arm                &  Arm/optical bench \\
 
  Mirror             &  Single mirror plate. \\
 
-                      
+
  Monochromator\_curved & Double bent multiple crystal
                       slabs with anisotropic gaussian
                       mosaic. \\
@@ -137,16 +129,16 @@ Arm                &  Arm/optical bench \\
     {\let\my=\\
     \begin{tabular}{|p{0.24\textwidth}|p{0.7\textwidth}|}
       \hline
-       {\bf MCSTAS/samples} & Description \\ 
+       {\bf MCSTAS/samples} & Description \\
        \hline
   Powder1      &  General powder sample with a single
                 scattering vector. \\
   Powder2      &  General powder sample with a two
-                scattering vectors. \\                
+                scattering vectors. \\
 
   Res\_sample   & Sample for resolution function
                 calculation. \\
-                
+
   Sans\_spheres  & Sample for Small Angle Neutron Scattering - hard spheres in thin solution, mono disperse. \\
 
   Single\_crystal & Mosaic single crystal with multiple
@@ -167,7 +159,7 @@ Arm                &  Arm/optical bench \\
     {\let\my=\\
     \begin{tabular}{|p{0.24\textwidth}|p{0.7\textwidth}|}
       \hline
-       {\bf MCSTAS/monitors} & Description \\ 
+       {\bf MCSTAS/monitors} & Description \\
        \hline
 DivLambda\_monitor &  Divergence/wavelength monitor. \\
 DivPos\_monitor  &    Divergence/position
@@ -183,7 +175,7 @@ Hdiv\_monitor    &    Horizontal divergence monitor
 L\_monitor           Wavelength-sensitive monitor. \\
 Monitor          &   Simple
                     single detector/monitor. \\
-                    
+
 Monitor\_4PI     &    Monitor that detects ALL
                     non-absorbed neutrons. \\
 Monitor\_nD      &    This
@@ -237,13 +229,13 @@ TOFlog\_mon      &    Rectangular Time-of-flight
     {\let\my=\\
     \begin{tabular}{|p{0.24\textwidth}|p{0.7\textwidth}|}
       \hline
-       {\bf MCSTAS/misc} & Description \\ 
+       {\bf MCSTAS/misc} & Description \\
        \hline
        Progress\_bar  &       A simulation
-                      progress bar. May also trigger intermediate SAVE.\\ 
+                      progress bar. May also trigger intermediate SAVE.\\
  Vitess\_input      &   Read neutron state
                       parameters from
-                      VITESS neutron file.\\ 
+                      VITESS neutron file.\\
  Vitess\_output    &  Write neutron state
      parameters to VITESS
                       neutron file.\\
@@ -261,7 +253,7 @@ TOFlog\_mon      &    Rectangular Time-of-flight
     {\let\my=\\
     \begin{tabular}{|p{0.24\textwidth}|p{0.7\textwidth}|}
       \hline
-       {\bf MCSTAS/contrib} & Description \\ 
+       {\bf MCSTAS/contrib} & Description \\
        \hline
        Al\_window     &         Aluminium
                         window in the beam. \\
@@ -270,7 +262,7 @@ TOFlog\_mon      &    Rectangular Time-of-flight
                         Collimator (ROC). \\
  Guide\_curved     &     Non focusing continuous curved guide (shown curved). \\
  Guide\_tapering  &     Rectangular tapered guide (parabolic, elliptic, sections ...). \\
-  
+
  FermiChopper    &       Fermi Chopper with
                         rotating frame. \\
  Filter\_graphite  &      Pyrolytic
@@ -304,18 +296,18 @@ TOFlog\_mon      &    Rectangular Time-of-flight
     {\let\my=\\
     \begin{tabular}{|p{0.24\textwidth}|p{0.7\textwidth}|}
       \hline
-       {\bf MCSTAS/share} & Description \\ 
+       {\bf MCSTAS/share} & Description \\
        \hline
        adapt\_tree-lib  & Handles a simulation optimisation space for
        adatative importance sampling.
                           Used by the Source\_adapt component. \\
        {\bf mcstas-r}      &   Main Run-time library (always included). \\
-       monitor\_nd-lib & Handles multiple monitor types. 
+       monitor\_nd-lib & Handles multiple monitor types.
                         Used by Monitor\_nD, Res\_monitor, \ldots \\
        read\_table-lib  & Enables to read a data table (text/binary) to be used within
                           an instrument or a component. \\
-       vitess-lib &     Enables to read/write Vitess event binary files. 
-                        Used by Vitess\_input and Vitess\_output \\             
+       vitess-lib &     Enables to read/write Vitess event binary files.
+                        Used by Vitess\_input and Vitess\_output \\
       \hline
     \end{tabular}
     \caption{Shared libraries of the \MCS\ library. See Appendix~\ref{c:kernelcalls} for details.}
@@ -331,14 +323,14 @@ TOFlog\_mon      &    Rectangular Time-of-flight
     {\let\my=\\
     \begin{tabular}{|p{0.24\textwidth}|p{0.7\textwidth}|}
       \hline
-       {\bf MCSTAS/data} & Description \\ 
+       {\bf MCSTAS/data} & Description \\
        \hline
  *.lau & Laue pattern file, as issued from Crystallographica or FullProf.
        Data: [ h   k   l Mult. d-space 2Theta   F-squared ] \\
  *.trm & transmission file, typically for monochromator crystals and filters.
        Data: [ k (Angs-1) , Transmission (0-1) ] \\
  *.rfl & reflectivity file, typically for mirrors and monochromator crystals.
-       Data: [ k (Angs-1) , Reflectivity (0-1) ] \\       
+       Data: [ k (Angs-1) , Reflectivity (0-1) ] \\
       \hline
     \end{tabular}
     \caption{Data files of the \MCS\ library.}
@@ -353,7 +345,7 @@ TOFlog\_mon      &    Rectangular Time-of-flight
     {\let\my=\\
     \begin{tabular}{|p{0.24\textwidth}|p{0.7\textwidth}|}
       \hline
-       {\bf MCSTAS/examples} & Description \\ 
+       {\bf MCSTAS/examples} & Description \\
       \hline
       *.instr & This directory contains example instruments, accessible throught the \verb+mcgui+ ``Neutron site'' menu. \\
       \hline
