--- a/trunk/e_monitor.tex
+++ b/trunk/e_monitor.tex
@@ -1,14 +1,14 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \section{E\_monitor: The energy-sensitive monitor}
-\component{E\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $E_{\rm min}$, $E_{\rm max}$, filename}{}
+\component{E\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $E_{\rm min}$, $E_{\rm max}$, filename}{}{}
 
 The component {\bf E\_monitor} resembles {\bf TOF\_monitor}
 to a very large extent. Only this monitor is sensitive to
 the neutron energy, which in binned in \textit{nchan} bins between
 $E_{\rm min}$ and $E_{\rm max}$.
 
-The output parameters from {\bf E\_monitor} are the total counts, 
+The output parameters from {\bf E\_monitor} are the total counts,
 and a file with 1-dimensional data: counts vs. $E$ as for {\bf TOF\_monitor}.
 
 
