--- a/trunk/mcstas_comp.bib
+++ b/trunk/mcstas_comp.bib
@@ -1,6 +1,7 @@
 @STRING{cjp="Can. J. Phys."}
-@STRING{nn="Neutron News"}  
+@STRING{nn="Neutron News"}
 @STRING{pb="Physica B"}
+@STRING{nim="Nucl. Instr. Meth."}
 
 @article{nn_10_20,
    author    = {K. Lefmann and K. Nielsen},
@@ -58,15 +59,8 @@
    type      = {Student's report}
 }
 
-@book{mcstasmanual,
-  author    = {Peter Willendrup, Emmanuel Farhi, Kim Lefmann, Per-Olof  Astrand, Marc Hagen and Kristian Nielsen},
-   title     = {User and Programmers Guide to the Neutron Ray-Tracing Package McStas, Version 1.8},
-   year      = {2004},
-   publisher = {Risoe Report}
-}
-
 @misc{mcstas_webpage,
-   note      = {See http://neutron.risoe.dk/mcstas/}
+   note      = {See http://www.mcstas.org}
 }
 
 @misc{ess_webpage,
@@ -105,5 +99,217 @@
   note       = {See http://www.hmi.de/projects/ess/vitess/}
 }
 
+@article{Copley86,
+   author    = {J. R. D. Copley,  P. Verkerk, A. A. van Well and H. Fredrikze},
+   journal   = {Comput. Phys. Commun.},
+   pages     = {337},
+   year      = {1986},
+   volume    = {40}
+}
+@book{Grimmett92,
+   author    = {Grimmett, G. R. and Stirzaker, D. R.},
+   title     = {Probability and Random Processes, 2nd Edition},
+   year      = {1992},
+   publisher = {Clarendon Press, Oxford}
+}
+@article{Leibnitz63,
+   author    = {H. Maeir-Leibnitz and T. Springer,},
+   journal   = {Reactor Sci. Technol.},
+   pages     = {217},
+   year      = {1963},
+   volume    = {17}
+}
 
+@article{Mildner90,
+   author    = {D.F.R. Mildner},
+   journal   = {Nucl. Instr. Meth.},
+   pages     = {189},
+   year      = {1990},
+   volume    = {A290}
+}
+
+@article{Lowde60,
+   author    = {R.A. Lowde},
+   journal   = {J. Nucl. Energy, Part A: Reactor Sci.},
+   pages     = {69},
+   year      = {1960},
+   volume    = {11}
+}
+@article{Copley03,
+   author    = {J.R.D. Copley},
+   journal   = {Nucl. Instr. Meth.},
+   pages     = {318},
+   year      = {2003},
+   volume    = {A510}
+}
+@article{Fermi47,
+   author    = {E. Fermi, J. Marshall, L. Marshall},
+   journal   = {Phys. Rev.},
+   pages     = {193},
+   year      = {1947},
+   volume    = {72}
+}
+@article{Peters05,
+   author    = {J. Peters},
+   journal   = {Nucl. Instr. Meth.},
+   pages     = {419},
+   year      = {2005},
+   volume    = {A540}
+}
+@article{Clark66,
+   author    = {C.D. Clark, E.W.J. Mitchell, D.W. Palmer and I.H. Wilson},
+   journal   = {J. Sci. Instrum.},
+   pages     = {1},
+   year      = {1966},
+   volume    = {43}
+}
+@article{Freund83,
+   author    = {A.K. Freund},
+   journal   = {Nucl. Instr. Meth.},
+   pages     = {495},
+   year      = {1983},
+   volume    = {213}
+}
+@article{Sears97,
+   author    = {V.F. Sears},
+   journal   = {Acta Cryst.},
+   pages     = {35},
+   year      = {1997},
+   volume    = {A53}
+}
+
+@book{Shirane02,
+   author    = {G. Shirane, S.M. Shapiro and J.M. Tranquada},
+   title     = {Neutron Scattering with a Triple-Axis Spectrometer},
+   year      = {2002},
+   publisher = {Cambridge University Press}
+}
+@article{Alianelli04,
+   author    = {L. Alianelli},
+   journal   = {J. Appl. Cryst.},
+   pages     = {732},
+   year      = {2004},
+   volume    = {37}
+}
+@article{Radeka74,
+   author    = {V. Radeka},
+   journal   = {IEEE Trans. Nucl. Sci.},
+   pages     = {51},
+   year      = {1974},
+   volume    = {NS-21}
+}
+@article{Charpak89,
+   author    = {V. Peskov, G. Charpak, W. Dominik and F. Sauli},
+   journal   = {Nucl. Instr. and Meth.},
+   pages     = {547},
+   year      = {1989},
+   volume    = {A277}
+}
+@article{Manzin04,
+   author    = {G. Manzin, B. Guerard, F.A.F. Fraga, L.M.S. Margato},
+   journal   = {Nucl. Instr. Meth.},
+   pages     = {102},
+   year      = {2004},
+   volume    = {A535}
+}
+@article{Copley93,
+   author    = {J.R.D. Copley},
+   journal   = {J. Neut. Research},
+   pages     = {21},
+   year      = {1993},
+   volume    = {1}
+}
+@article{Cussen03,
+   author    = {L. D. Cussen},
+   journal   = {J. Appl. Cryst.},
+   pages     = {1204},
+   year      = {2003},
+   volume    = {36}
+}
+
+@article{James80,
+   author    = {F. James},
+   journal   = {Rep.\ Prog.\ Phys.},
+   pages     = {1145},
+   year      = {1980},
+   volume    = {43}
+}
+@article{Farhi02,
+   author    = {E. Farhi, T. Hansen, A. Wildes, R. Ghosh and K. Lefmann},
+   journal   = {Appl. Phys.},
+   pages     = {S1471},
+   year      = {2002},
+   volume    = {A 74}
+}
+@article{Schanzer04,
+   author    = C. Schanzer, P. Boni, U. Filges, T. Hils},
+   journal   = {Nucl. Instr. Meth.},
+   pages     = {63},
+   year      = {2004},
+   volume    = {A 529}
+}
+@article{Zsigmond04,
+   author    = {G. Zsigmond, K. Lieutenant, S. Manoshin et al.},
+   journal   = nim,
+   pages     = {218},
+   year      = {2004},
+   volume    = {A 529}
+}
+@article{Lieutenant05,
+   author    = {K. Lieutenant},
+   journal   = {J. Phys.: Condens. Matter},
+   pages     = {S167},
+   year      = {2005},
+   volume    = {17}
+}
+@article{Vitess,
+   author    = {D. Wechsler, G. Zsigmond, F. Streffer and F. Mezei},
+   journal   = nn,
+   pages     = {11},
+   year      = {2000},
+   volume    = {25}
+}
+@article{mcstas_pb,
+   author    = {P. Willendrup, E. Farhi and K. Lefmann},
+   journal   = pb,
+   pages     = {735},
+   year      = {2004},
+   volume    = {350}
+}
+@article{NISP,
+   author    = {P. A. Seeger, L. L. Daemen, T. G. Thelliez and R. P. Hjelm},
+   journal   = pb,
+   pages     = {433},
+   year      = {2000},
+   volume    = {283}
+}
+@article{IDEAS,
+   author    = {W.-T. Lee and X.-L. Wang},
+   journal   = nn,
+   pages     = {30},
+   year      = {2002},
+   volume    = {13},
+   note      = {See website http://www.sns.gov/ideas/}
+}
+
+@article{Restrax,
+   author    = {J. Saroun, J. Kulda},
+   journal   = pb,
+   pages     = {1102},
+   year      = {1997},
+   volume    = {234},
+   note      = {See website http://omega.ujf.cas.cz/restrax/}
+}
+
+
+@book{mcstasmanual,
+  author    = {Peter Willendrup, Emmanuel Farhi, Kim Lefmann, and Klaus Lieutenant},
+   title     = {User and Programmers Guide to the Neutron Ray-Tracing Package McStas, Version 1.9},
+   year      = {2005},
+   publisher = {Risoe Report}
+}
+
+@misc{tripoli_webpage,
+  note       = {See http://www.nea.fr/html/dbprog/tripoli-abs.html}
+}
 
