--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -2,7 +2,7 @@
 
 \chapter{Beam optical components:
 Arms, slits, collimators, choppers, guides, monochromators}
-This chapter contains a number of optical components 
+This chapter contains a number of optical components
 that is used to modify the neutron beam in various ways,
 as well as the ``generic'' component {\bf Arm}.
 
@@ -17,8 +17,11 @@ as well as the ``generic'' component {\bf Arm}.
 \newpage
 \input{collimator_linear}
 
-%\newpage
-%\input{filter}
+\newpage
+\input{collimator_radial}
+
+\newpage
+\input{filter}
 
 \newpage
 \input{guide}
