--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -575,6 +575,7 @@ Additionally, any system error will result in similar messages, giving indicatio
 
 \subsection{Optimizing a simulation}
 \index{Optimization|textbf}
+\label{s:optim}
 There are various other ways to speed-up a simulation
 \begin{itemize}
 \item Optimize the compilation of the instrument, as explained in section~\ref{s:compile}.
