--- a/trunk/sans.tex
+++ b/trunk/sans.tex
@@ -1,16 +1,16 @@
 \section{Sans\_spheres: A sample of hard spheres for small-angle scattering}
 \label{sans}
 
-\component{Sans\_spheres}{System, Lise Arleth}{$R$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $r$}{$p_{\rm cut}$}
+\component{Sans\_spheres}{System, Lise Arleth}{$R$, $x_w$, $y_h$, $z_t$, $r$, $\sigma_a$}{$phi$, $q_{max}$, $\Delta \rho$}{}
 
 The component {\bf Sans\_spheres} models a sample of small independent
 spheres of radius $R$, which are uniformly distributed
 in a rectangular volume $x_w \times y_h \times z_t$ with a volume
 fraction $\phi$. The absorption cross section density for the spheres
-is $\sigma_a$ (in units of m$^{-1}$), specified  
+is $\sigma_a$ (in units of m$^{-1}$), specified
 for neutrons at 2200 m/s. Absorption and incoherent scattering from the medium
 is neglected.
 The difference in scattering length density
 (the contrast) between the hard spheres and the medium is called $\Delta \rho$.
- 
+
 {\bf Much more to write here, who will do that??}
