--- a/trunk/Source_Optimizer.tex
+++ b/trunk/Source_Optimizer.tex
@@ -1,15 +1,15 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \section{Source\_Optimizer: A general Optimizer for McStas}
-\label{s:sourceoptimizer}
+\label{source-optimizer}
+\component{Source\_Optimizer}{E. Farhi}{options}{bins, step, keep}{not fully validated}
 
-This component was contributed by Emmanuel Farhi, Institute
-Laue-Langevin.
+This component is not exactly a source, but rather a neutron beam modifier. It must be positioned after the source, anywhere in the instrument description.
 
 The component {\bf Source\_Optimizer} optimizes the whole neutron flux
 in order to achieve better statistics at each {\bf Monitor\_Optimizer}
-location(s) (see section~\ref{s:monitoroptimizer} for this latter
-component). It can act on any incoming neutron beam (from any source
+location(s) (see section~\ref{monitor-optimizer} for this latter
+component). It acts on any incoming neutron beam (from any source
 type), and more than one optimization criteria location can be placed
 along the instrument.
 
@@ -26,7 +26,7 @@ without optimizer.
 \subsection{The optimization algorithm}
 
 When a neutron reaches the {\bf Monitor\_Optimizer} location(s), the
-component records its position ($x$, $y$) and speed ($v_x,
+component records its previous position ($x$, $y$) and speed ($v_x,
 v_y, v_z$) when it passed in the {\bf Source\_Optimizer}. Some
 distribution tables of {\it good} neutrons characteristics are then
 built.
@@ -35,8 +35,8 @@ When a {\it bad} neutron comes to the {\bf Source\_Optimizer} (it would
 then have few chances to reach {\bf Monitor\_Optimizer}), it is changed
 into a better one. That means that its position and velocity coordinates
 are translated to better values according to the {\it good} neutrons
-distribution tables. Anyway, the neutron energy ($\surd v_x^2 + v_y^2 +
-v_z^2$) is kept as far as possible.
+distribution tables. The neutron energy ($\surd v_x^2 + v_y^2 +
+v_z^2$) is kept (as far as possible).
 
 The {\bf Source\_Optimizer} works as follow:
 \begin{enumerate}
@@ -47,7 +47,7 @@ The {\bf Source\_Optimizer} works as follow:
     the {\it Reference } source.}
 \item{\label {SourceOptimizer:step3}The {\bf Monitor\_Optimizer} records
     the {\it good} neutrons (that reach it) and communicate an {\it
-      Optimized} source to the {\bf Source\_Optimizer}. However, '{\it
+      Optimized} beam requirement to the {\bf Source\_Optimizer}. However, retains '{\it
       keep}' percent of the original {\it Reference} source is sent
     unmodified (default is 10 \%). The {\it Optimized} source is thus:
 
@@ -66,7 +66,7 @@ The {\bf Source\_Optimizer} works as follow:
     \end{equation}
     and thus the overall flux at {\bf Monitor\_Optimizer} location is
     the same as without the optimizer. Usually, the process sends more
-    {\it good} neutrons from the {\it Optimized} source than than in the
+    {\it good} neutrons from the {\it Optimized} source than that in the
     {\it Reference} one.
     The energy (and velocity) spectra of neutron beam is also kept, as
     far as possible. For instance, an optimization of $v_z$ will induce
@@ -85,7 +85,7 @@ weight $p_{initial}$ may lead to spikes on detector signals. This is
 greatly improved by lowering the weight $p$ during these steps, with the
 {\it smooth} option.
 The component optimizes the neutron parameters on the basis of
-independant variables. Howver, it usually does work fine when these
+independant variables (1D phase-space optimization). However, it usually does work fine when these
 variables are correlated (which is often the case in the course of the
 instrument simulation).
 The memory requirements of the component are very low, as no big
@@ -94,19 +94,19 @@ $n$-dimensional array is needed.
 \subsection{Using the Source\_Optimizer}
 
 To use this component, just install the {\bf Source\_Optimizer} after a
-source (but any location is possible in principle), and use the {\bf
-  Monitor\_Optimizer} at a location where you want to have better
+source (but any location is possible afterwards in principle), and use the {\bf
+  Monitor\_Optimizer} at a location where you want to reach better
 statistics.
 
 \begin{verbatim}
-    /* where to act on neutrons */
-    COMPONENT optim_s = Source_Optimizer(options="") 
+    /* where to act on neutron beam */
+    COMPONENT optim_s = Source_Optimizer(options="")
     ...
     /* where to have better statistics */
-    COMPONENT optim_m = Monitor_Optimizer( 
-    xmin = -0.05, xmax = 0.05, 
+    COMPONENT optim_m = Monitor_Optimizer(
+    xmin = -0.05, xmax = 0.05,
     ymin = -0.05, ymax = 0.05,
-    optim_comp = optim_s) 
+    optim_comp = optim_s)
     ...
     /* using more than one Monitor_Optimizer is possible */
 \end{verbatim}
@@ -122,9 +122,10 @@ The default configuration (equivalent to {\it options} = "") is
 \begin{tabular}{rcl}
   {\it options} & = & "{\it continuous} optimization,
   {\it auto} setting, {\it keep} = 10, {\it bins} = 10, \\
-  & & {\it smooth} spikes, and do {\it not free} energy during optimization".
+  & & {\it smooth} spikes, SetXY+SetDivV+SetDivS".
 \end{tabular}
 \end{center}
+Additionally, you may restrict the optimization to only some of the neutron parameters, using the {\it SetXY, SetV, SetS, SetDivV, SetDivS} keywords.
 The keyword modifiers {\it no} or {\it not} revert the next option.
 Other options not shown here are:
 \begin{verbatim}
@@ -136,3 +137,5 @@ The {\it file} option will save the source distributions at the end of
 the optimization. If no name is given the component name will be used,
 and a '.src' extension will be added. By default, no file is generated.
 The file format is in a McStas 2D record style.
+
+As an alternative, you may use the Source\_adapt component (see section \ref{s:source-adapt}) which performs a 2D phase-space optimization.
