--- a/trunk/arm.tex
+++ b/trunk/arm.tex
@@ -1,11 +1,11 @@
 \section{Arm: The generic component}
 \label{explain:arm}
-\component{Arm}{System}{(none)}{(none)}
+\component{Arm}{System}{(none)}{(none)}{}
 
 The component {\bf Arm} is empty; is resembles an optical bench
 and has no effect on the neutron.
-The function of this component is only to set up a local 
-co-ordinate system within the instrument definition. 
+The function of this component is only to set up a local
+co-ordinate system within the instrument definition.
 Other components may then be
 positioned relative to the arm component
 using the \MCS\ meta-language.
@@ -13,6 +13,8 @@ The use of arm components in the instrument definitions
 is not required but is recommended for clarity.
 
 {\bf Arm} has no input parameters.
-An example of the use of this component is given in the 
+An example of the use of this component is given in the
 sample instrument definitions, listed in Appendix \ref{instcode}.
+
+An alternative to the Arm component is the {\bf Progress\_bar} which does the same as Arm, {\it i.e.} nothing, but also displays the simulation progess, and optionally saves regularly the data files in the course of the simulation, so that you can look at it raising \emph{during} the simulation.
 
