--- a/trunk/detector.tex
+++ b/trunk/detector.tex
@@ -3,12 +3,12 @@
 \chapter{Detectors and monitors}
 
 In real neutron experiments, detectors and monitors play quite
-different roles. One wants the detectors to be as efficient as 
-possible, counting all neutrons (and absorbing them in the process), 
+different roles. One wants the detectors to be as efficient as
+possible, counting all neutrons (and absorbing them in the process),
 while the monitors measure the intensity of the incoming beam, and must
 as such be almost transparent, interacting only with (roughly) 0.1-1\%
-of the neutrons passing by. In computer simulations, it is 
-of course possible to detect every neutron without 
+of the neutrons passing by. In computer simulations, it is
+of course possible to detect every neutron without
 absorbing it or disturbing any of its parameters. Hence, the two components
 have very similar functions in the simulations, and we do
 not distinguish between them. For simplicity, they are from here on
@@ -31,18 +31,18 @@ Any neutron that passes within the opening is counted ---
 the number counting variable is incremented: $N_i = N_{i-1}+1$,
 the neutron
 weight $p_i$ is added to the weight counting variable:
-$I_i = I_{i-1} + p_i$, 
+$I_i = I_{i-1} + p_i$,
 and the second moment of the weight is
-updated: $M_{2,i} = M_{2,i-1} + p_i^2$. 
+updated: $M_{2,i} = M_{2,i-1} + p_i^2$.
 The input parameters for {\bf Monitor} are
-the opening coordinates $x_{\rm min}, x_{\rm max}, y_{\rm min}$, 
-$y_{\rm max}$, 
+the opening coordinates $x_{\rm min}, x_{\rm max}, y_{\rm min}$,
+$y_{\rm max}$,
 and the output parameters are the three count numbers, $N, I$, and $M_2$.
 
 \section{Monitor\_4PI: The $4\pi$ monitor}
 The component {\bf Monitor\_4PI} does not model any physical monitor
 but may be thought of as a spherical monitor completely surrounding the
-previous component. 
+previous component.
 It simply detects all neutrons that have not been absorbed at the
 position in the instrument in which it is placed.
 If this monitor is placed in the instrument file after
@@ -53,37 +53,37 @@ This may be useful during tests.
 The output parameters for {\bf Monitor\_4PI} are the three count numbers, $N, I$, and $M_2$.
 
 \section{PSD\_monitor: The PSD monitor}
-The component {\bf PSD\_monitor} closely resembles 
+The component {\bf PSD\_monitor} closely resembles
 {\bf Monitor}.
 In the PSD monitor, though, the rectangular monitor window is divided
 into $n \times m$ pixels, each of which acts like a single
 monitor.
 
 The input parameters for {\bf PSD\-monitor} are
-the opening coordinates $x_{\rm min}, x_{\rm max}, y_{\rm min}$, 
+the opening coordinates $x_{\rm min}, x_{\rm max}, y_{\rm min}$,
 $y_{\rm max}$, the array dimensions $(n,m)$, and a name of a file in
 which to store $I(x,y)$.
-The output parameters are three two-dimensional arrays 
+The output parameters are three two-dimensional arrays
 of counts: $N(x,y), I(x,y), M_2(x,y)$.
 
 \section{PSD\_monitor\_4PI: The $4\pi$ PSD monitor}
-The component {\bf PSD\_monitor\_4PI} represents 
+The component {\bf PSD\_monitor\_4PI} represents
 a PSD monitor shaped as a sphere, much like {\bf Monitor\_4PI}.
-It subdivides the surface of the sphere into pixels of equal 
+It subdivides the surface of the sphere into pixels of equal
 area (using a projection onto a cylinder with an axis
-which is vertical in the local coordinate system) 
+which is vertical in the local coordinate system)
 and distributes the incoming neutron counts into the respective pixels.
 
 The $4\pi$ PSD monitor is typically placed
-around another component. Used in this way, 
+around another component. Used in this way,
 the $4\pi$ PSD monitor is very useful for debugging components.
 
 The input parameters for {\bf PSD\_monitor\_4PI} are
 the monitor radius, the number of pixels, $(n_x, n_y)$ -- where
 $y$ is the vertical direction, and the name of the file in which
-to store $I(x,y)$. 
+to store $I(x,y)$.
 The output parameters of the component are the three count arrays
-$N(x,y), I(x,y)$, and $M_2(x,y)$. 
+$N(x,y), I(x,y)$, and $M_2(x,y)$.
 
 
 \section{PSD\_monitor\_4PI\_log: The $4\pi$ PSD monitor with log scale}
@@ -103,20 +103,20 @@ The input parameters for PSD\_monitor\_4PI\_log are the same as for PSD\_monitor
 
 
 \section{TOF\_monitor: The time-of-flight monitor}
-{\bf TOF\_monitor} is a rectangular single monitor 
+{\bf TOF\_monitor} is a rectangular single monitor
 which is sensitive to
 the absolute time, where the neutron is hits the component.
 Like in a real time-of-flight detector, the time dimension is
 binned into small time intervals of length $dt$, whence this monitor
 updates a one-dimensional array of counts.
 
-The input parameters for {\bf TOF\_monitor} are the opening 
-coordinates $x_{\rm min}, x_{\rm max}, y_{\rm min}$, $y_{\rm max}$, 
-the number of time bins (beginning from $t=0$),  
-${\it n_{\rm chan}}$, the time spacing between bins, $dt$ (in $\mu$s), 
+The input parameters for {\bf TOF\_monitor} are the opening
+coordinates $x_{\rm min}, x_{\rm max}, y_{\rm min}$, $y_{\rm max}$,
+the number of time bins (beginning from $t=0$),
+${\it n_{\rm chan}}$, the time spacing between bins, $dt$ (in $\mu$s),
 and the name of the output file. Output parameters of the component
 are the three count arrays $N(i), I(i)$, and $M_2(i)$, where $i$ is
-the bin number. 
+the bin number.
 
 \section{E\_monitor: The energy sensitive monitor}
 \label{s:e_monitor}
@@ -131,7 +131,7 @@ the total energy interval given by $E_{\rm min}$ and $E_{\rm max}$ (in meV), and
 \textit{nchan} and the
 name of the output file. Output parameters of the component
 are the three count arrays
-$N(i), I(i)$, and $M_2(i)$, $i$ being the bin number. 
+$N(i), I(i)$, and $M_2(i)$, $i$ being the bin number.
 
 
 \section{L\_monitor: The wavelength sensitive monitor}
@@ -157,23 +157,23 @@ The component {\bf Divergence\_monitor} is a rectangular monitor
 with an opening in the \textit{x-y} plane,
 which is sensitive to the neutron divergence, {\em i.e.} the angle
 between the neutron path and the monitor surface normal.
- 
+
 The divergence is divided into horisontal and vertical divergencies,
-which are calculated as $\delta_h = \tan^{-1}(v_x/v_z)$ 
-and $\delta_v = \tan^{-1}(v_y/v_z)$, respectively. 
-Only neutrons within a divergence window of 
-$\delta_h = (-\delta_{\rm h,max} ; \delta_{\rm h,max})$, 
-$\delta_v = (-\delta_{\rm v,max} ; \delta_{\rm v,max})$ 
+which are calculated as $\delta_h = \tan^{-1}(v_x/v_z)$
+and $\delta_v = \tan^{-1}(v_y/v_z)$, respectively.
+Only neutrons within a divergence window of
+$\delta_h = (-\delta_{\rm h,max} ; \delta_{\rm h,max})$,
+$\delta_v = (-\delta_{\rm v,max} ; \delta_{\rm v,max})$
 are detected. The counts are binned in an array of $n_h \times n_v$ pixels.
 
 The input parameters for the Divergence\_monitor component are the opening coordinates
-$(x_{\rm min}, x_{\rm max}, y_{\rm min}, y_{\rm max})$, 
-the number of pixels $(n_h, n_v)$, 
-the parameters $(\delta_{\rm h,max}, \delta_{\rm v,max})$ 
+$(x_{\rm min}, x_{\rm max}, y_{\rm min}, y_{\rm max})$,
+the number of pixels $(n_h, n_v)$,
+the parameters $(\delta_{\rm h,max}, \delta_{\rm v,max})$
 defining the divergence interval,
 and a name of the file in which to store the detected intensities.
 
-Note that a divergence sensitive monitor with a small opening may be 
+Note that a divergence sensitive monitor with a small opening may be
 thought of as a non-reversing pinhole camera.
 
 
@@ -186,9 +186,9 @@ neutron intensity as a function of position and divergence is output in
 a two-dimensional histogram. This output may be directly compared to an
 acceptance diagram, an analytical technique that is sometimes used to
 calculate neutron guide performances.
- 
+
 The horizontal divergence is calculated as $\delta_h = \tan^{-1}(v_x/v_z)$ .
-Only neutrons within a divergence window of 
+Only neutrons within a divergence window of
 $\delta_h = (-\delta_{\rm h,max} ; \delta_{\rm h,max})$ are detected.
 
 The input parameters for the DivPos\_monitor component are the opening coordinates
@@ -207,9 +207,9 @@ with an opening in the \textit{x-y} plane,
 which is sensitive to both the horizontal neutron divergence and the
 wavelength. The neutron intensity as a function of wavelength and
 divergence is output in a two-dimensional histogram.
- 
+
 The horizontal divergence is calculated as $\delta_h = \tan^{-1}(v_x/v_z)$ .
-Only neutrons within a divergence window of 
+Only neutrons within a divergence window of
 $\delta_h = (-\delta_{\rm h,max} ; \delta_{\rm h,max})$ and with
 wavelength $\lambda_0 < \lambda < \lambda_1$ are detected.
 
@@ -276,7 +276,7 @@ and \textit{p2sum}, and the handle \textit{file} of the output file.
 \label{s:adapt_check}
 
 The component {\bf Adapt\_check} is used together with the Source\_adapt
-component --- see section~\ref{s:source_adapt} for details. When placed
+component --- see section~\ref{s:source-adapt} for details. When placed
 somewhere in an instrument using Source\_adapt, the source will optimize
 for neutrons that reach that point without being absorbed (regardless of
 neutron position, direction, wavelength, \textit{etc}).
