--- a/trunk/div_monitor.tex
+++ b/trunk/div_monitor.tex
@@ -1,11 +1,11 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \section{Divergence\_monitor: A divergence sensitive monitor}
-\component{Divergence\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm v}$, $n_{\rm h}$, $\eta_{\rm v,max}$, $\eta_{\rm h,max}$, filename}{}
+\component{Divergence\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm v}$, $n_{\rm h}$, $\eta_{\rm v,max}$, $\eta_{\rm h,max}$, filename}{}{}
 
 
 The component {\bf Divergence\_monitor} is a two-dimensional monitor,
-which resembles {\bf PSD\_Monitor}. As for this component,  
+which resembles {\bf PSD\_Monitor}. As for this component,
 the detector window is set
 by the $x$ and $y$ input coordinates.
 The {\bf Divergence\_ monitor} is sensitive to the neutron divergence,
@@ -14,12 +14,12 @@ $\eta_{\rm h} = \tan^{-1}(v_x/v_z)$ and $\eta_{\rm v} = \tan^{-1}(v_y/v_z)$.
 The neutron counts are being histogrammed
 into $n_{\rm v} \times n_{\rm h}$ pixels, each of which acts like a single
 counter. The divergence range accepted is in the vertical direction
-$[-\eta_{\rm v,max}; \eta_{\rm v,max}]$, and simular for the horizontal 
+$[-\eta_{\rm v,max}; \eta_{\rm v,max}]$, and simular for the horizontal
 direction.
 
-The output from {\bf PSD\_monitor} is the integrated counts, $n, I, M_2$, 
-as well as 
-three two-dimensional arrays of counts: $n(\eta_{\rm v},\eta_{\rm h}), 
+The output from {\bf PSD\_monitor} is the integrated counts, $n, I, M_2$,
+as well as
+three two-dimensional arrays of counts: $n(\eta_{\rm v},\eta_{\rm h}),
 I(\eta_{\rm v},\eta_{\rm h}), M_2(\eta_{\rm v},\eta_{\rm h})$.
 The arrays are written to a file and can be read e.g. by the tool
 {\bf MC\_plot}, see the system manual.
