--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -366,9 +366,9 @@ allow components to overlap, except for particular cases (see the \texttt{GROUP}
 Indeed, many components of the \MCS\ library \index{Library!Components} start
 by propagating the neutron event to the begining of the component itself.
 Anyway, when the corresponding propagation time is found to be negative
-({\it i.e.} the neutron is already \emph{after} the component, and has thus
+({\it i.e.} the neutron is already \emph{after} or \emph{aside} the component, and has thus
 passed the 'active' position), the neutron event is ABSORBed, resulting in a zero intensity and event counts after a given position. The number of such removed neutrons is indicated at the end of the simulation.
-Getting such warning messages is an indication that either some components overlap, or some neutrons are getting outside of the simulation, for instance this usually happens after a monochromator, as the non-reflected beam is indeed lost. A special warning appears when no neutron can reach some part of the simulation. This is usually the sign of either overlapping components or a very low intensity.
+Getting such warning messages is an indication that either some components overlap, or some neutrons are getting outside of the simulation, for instance this usually happens after a monochromator, as the non-reflected beam is indeed lost. A special warning appears when no neutron can reach some part of the simulation. This is usually the sign of either overlapping components or a very low intensity. \index{Removed neutron events}
 
 Some configuration require to position some components not one after the other (nested, in parallel, or overlapping), for instance in a multiple crystal monochromator (they are then side by side). One would then like the neutron to interact with \emph{one of} the components and then continue after this group of components.
 
@@ -695,15 +695,18 @@ simulation, usually to initialize any variables declared in the
   \verb|%}|
 \end{quote}
 \index{Keyword!TRACE}
+\index{Library!Run-time!PROP\_Z0}
 This performs the actual computation of the interaction between the neutron
 and the component. The C code should perform the appropriate
 calculations and assign the resulting new neutron state to the state
-parameters.
+parameters. Most components will require propagation routines to reach the component entrance/area. Special macros \verb+PROP_Z0;+ and \verb+\PROP_DT();+ are provided to automate this process (see section \ref{s:calls:run-time}).
 
 \index{Library!Run-time!ABSORB}
 The C code may also execute the special macro \texttt{ABSORB} to indicate
 that the neutron has been absorbed in the component and the simulation of
-that neutron will be aborted. When the neutron state is changed or detected, for
+that neutron will be aborted. On the other hand, if the neutron event should \emph{not} be removed in a \verb+PROP_+ propagation call, the special macro \verb+ALLOW_BACKPROP;+ must preceed it.
+\index{Removed neutron events}\index{Library!Run-time!ALLOW\_BACKPROP}
+When the neutron state is changed or detected, for
 instance if the component simulates multiple events (for example multiple
 reflections in a guide, or multiple scattering in a powder sample), the
 special macro \texttt{SCATTER} should be called. This does not affect the
@@ -712,7 +715,7 @@ programs to visualize the scattering events properly, and to handle
 component \texttt{GROUP}s in an instrument definition (see
 section~\ref{s:trace}). The \texttt{SCATTER} macro should be called with
 the state parameters set to the proper values for the scattering event.
-For an example of \texttt{SCATTER}, see the optics/Channeled\_guide
+For an example of \texttt{SCATTER}, see the optics/Guide\_channeled
 component. \index{Library!Run-time!SCATTER}
 
 
