--- a/trunk/l_monitor.tex
+++ b/trunk/l_monitor.tex
@@ -4,7 +4,7 @@
 \section{L\_monitor: The wavelength sensitive monitor}
 \label{s:L_monitor}
 
-\component{L\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $\lambda_{\rm min}$, $\lambda_{\rm max}$, filename}{}
+\component{L\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $\lambda_{\rm min}$, $\lambda_{\rm max}$, filename}{}{}
 
 
 The component {\bf L\_monitor} is very similar to
