--- a/trunk/res_monitor.tex
+++ b/trunk/res_monitor.tex
@@ -3,7 +3,7 @@
 \section{Res\_monitor: The detector for resolution calculation}
 \label{s:res_monitor}
 
-\component{Res\_monitor}{System, Alan Tennant}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, filename, res\_sample, buffer size}{$x_w$, $y_h$, $z_t$, options}
+\component{Res\_monitor}{System, Alan Tennant}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, filename, res\_sample, buffer size}{$x_w$, $y_h$, $z_t$, options}{}
 
 The component {\bf Res\_monitor} is used for calculating the
 resolution function of a particular instrument with detector of the
