--- a/trunk/res_sample.tex
+++ b/trunk/res_sample.tex
@@ -3,13 +3,13 @@
 \section{Res\_sample: A uniform scatterer for resolution calculation}
 \label{s:res_sample}
 
-\component{Res\_sample}{System, Alan Tennant}{$r_{\rm i}$, $r_{\rm o}$, $h$, $r_{\rm focus}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$, $E_0$, $\Delta E$ }{$x_w$, $y_h$, $z_t$, $x_{\rm focus}$, $y_{\rm focus}$, $a_{\rm v, focus}$, $a_{\rm h, focus}$, target index}
+\component{Res\_sample}{System, Alan Tennant}{$r_{\rm i}$, $r_{\rm o}$, $h$, $r_{\rm focus}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$, $E_0$, $\Delta E$ }{$x_w$, $y_h$, $z_t$, $x_{\rm focus}$, $y_{\rm focus}$, $a_{\rm v, focus}$, $a_{\rm h, focus}$, target index}{}
 
 The component \textbf{Res\_sample} models an inelastic sample that
-scatters completely homogeneous in position and energy, 
+scatters completely homogeneous in position and energy,
 within specified intervals. Regardless of
 the state of the incoming neutron, all directions and energies for the
-scattered neutron have the same probability. This is clearly 
+scattered neutron have the same probability. This is clearly
 not a physical sample! Rather, the component is meant
 for computation of the resolution function, but it may also be used
 for test and debugging purposes. For calculations of the resolution
@@ -17,12 +17,12 @@ function, {\bf Res\_sample} should be used
 together with the \textbf{Res\_monitor} component, described in
 section~\ref{s:res_monitor}.
 
-The shape of {\rm Res\_sample} is either a hollow cylinder 
+The shape of {\rm Res\_sample} is either a hollow cylinder
 or a rectangular box, as specified for {\rm Vanadium}
-(see section~\ref{s:v_sample}).The hollow cylinder shape is 
-specified with the inner and outer radius, $r_{\rm i}$ and $r_{\rm o}$, 
+(see section~\ref{s:v_sample}).The hollow cylinder shape is
+specified with the inner and outer radius, $r_{\rm i}$ and $r_{\rm o}$,
 respectively, and the height, $h$.
-If these parameters are unspecified, 
+If these parameters are unspecified,
 the shape is instead a box of dimensions $x_w$, $y_h$, and $z_t$.
 See figure~\ref{f:res_sample}.\par
 %
@@ -51,7 +51,7 @@ flight path length inside the sample, with the constant of
 proportionality arbitrarily set to $1/(2|\textit{radius\_o}|)$. The
 reason for this is that the resolution
 function of an instrument (although including the sample size)
-is independent of any sample properties such as scattering 
+is independent of any sample properties such as scattering
 and absorbtion cross sections.does not depend on the scattering
 cross section.
 
@@ -62,15 +62,15 @@ the interval $[E_0-\Delta E; E_0+\Delta E]$ which hence must be
 chosen large enough to cover all interesting neutrons. Similarly, the
 direction is chosen in a user-specified range,
 either within a sphere of radius $r_{\rm foc}$, within a rectangular
-target with measures $(x_{\rm focus}, y_{\rm focus})$ 
-or in the specified angular range.
+target with measures $(x_{\rm focus}, y_{\rm focus})$
+or in the specified angular range. This target is positioned at the $x_{target}$, $y_{target}$, $z_{target}$ point in space, or using the target\_index for wich e.g. 1 is the further component, -1 is the previous, etc...
 
 A special feature, used when computing resolution functions, is that the
 component stores complete information about the scattering event in the
 output parameter \textit{res\_struct}. The information includes initial
 and final wave vectors, the coordinates of the scattering point, and the
 neutron weight after the scattering event. From this information the
-scattering parameters $({\bf Q}, \omega)$ can be recorded 
+scattering parameters $({\bf Q}, \omega)$ can be recorded
 for every scattering event and used to compute the resolution function.
 For an example of using the
 information in the output parameter, see the description of the
