--- a/trunk/slit.tex
+++ b/trunk/slit.tex
@@ -1,24 +1,24 @@
 \section{Slit: A beam defining diaphragm}
 \label{slit}
 
-\component{Slit}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $r$}{$p_{\rm cut}$}
+\component{Slit}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $r$}{$p_{\rm cut}$}{}
 
 The component {\bf Slit} is a very simple construction.
-It sets up an opening at $z=0$, and propagates the neutrons 
+It sets up an opening at $z=0$, and propagates the neutrons
 onto this plane (by the kernel call PROP\_Z0).
-Neutrons within the slit opening are unaffected, 
+Neutrons within the slit opening are unaffected,
 while all other neutrons
 are discarded by the kernel call ABSORB.
 
 By using this simple slit, some neutrons contributing to the background
-in a real experiment will be neglected. 
+in a real experiment will be neglected.
 These are the ones that scatter off the inner side
-of the slit, penetrates the slit material, 
+of the slit, penetrates the slit material,
 or clear the outer edges of the slit.
 
 The input parameters of {\bf Slit} are the four coordinates,
 $(x_{\rm min}, x_{\rm max}, y_{\rm min}, y_{\rm max})$
-defining the opening of the rectangle, or the radius $r$ of 
+defining the opening of the rectangle, or the radius $r$ of
 a circular opening, depending on which parameters are specified.
 
 The slit component can also be used to discard unsignificant (very low weight)
