--- a/trunk/source_simple.tex
+++ b/trunk/source_simple.tex
@@ -1,31 +1,33 @@
-\section{Source\_simple: A simple continuous source 
+\section{Source\_simple: A simple continuous source
 with a flat energy/wavelength spectrum}
 \label{source-simple}
 \index{Sources!Source\_simple}
 
-\component{Source\_simple}{System}{ $r_{\rm s}$, $z_{\rm foc}$, $w$, $h$, $E_0$, $\Delta E$, $\Psi$}{$\lambda_0$, $d\lambda$}
+\component{Source\_simple}{System}{ $r_{\rm s}$, $z_{\rm foc}$, $w$, $h$, $E_0$, $\Delta E$, $\Psi$}{$\lambda_0$, $d\lambda$}{Validated, position is the center of disk}
 
-This component is 
+This component is
 a simple source with a energy distribution which is uniform
-in the range $E_0 \pm dE$ 
+in the range $E_0 \pm dE$
 (or wavelength distribution in the range $\lambda_0 \pm d\lambda$).
 This component is not used for detailed time-of-flight simulations,
 so we put $t=0$ for all neutron rays.
 
 The initial neutron ray position is chosen randomly from within a
-circle of radius $r_{\rm s}$ in the $z=0$ plane. 
+circle of radius $r_{\rm s}$ in the $z=0$ plane.
 This geometry is a fair approximation
 of a cylindrical cold/thermal source with the beam going out along
 the cylinder axis.
 
 The initial neutron ray direction is focused within
 a solid angle, defined by a rectangular target of width
-$w$, height $h$, parallel to 
-the $xy$ plane placed at $(0,0,z_{\rm foc})$. 
+$w$, height $h$, parallel to
+the $xy$ plane placed at $(0,0,z_{\rm foc})$.
 
 The initial weight of the created neutron ray, $p_0$, is set to the
 energy-integrated flux, $\Psi$, times the source area, $\pi r_{\rm s}^2$
 times a solid-angle factor, which is basically the
 solid angle of the focusing rectangle.
-See also the discussion on focusing in the \MCS\ Manual \ref{s:focus}. 
+See also the discussion on focusing in the \MCS\ Manual \ref{s:focus}.
 
+This component replaces Source\_flat, Source\_flat\_lambda,
+Source\_flux and Source\_flux\_lambda.
