--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -11,6 +11,37 @@ factor should transform under a Monte Carlo choice and specialize this
 to the concept of focusing components.  Finally, we present a way of
 generating random numbers with arbitrary distributions.
 
+\section{Introduction}
+What makes physicists happy ? Probably collect good quality data, pushing the instruments to their limits, and fit that data to physical models.
+Among available measurement techniques, neutron scattering provides a large variety of spectrometers to probe structure and dynamics of all kinds of materials.
+
+Unfortunately the neutron flux is often a limitation in the experiments. This then motivates instrument responsibles to improve the flux and the overall efficiency at the spectrometer positions, and even to design new machines. Using both analytical and numerical methods, optimal configurations may be found.
+
+But achieving a satisfactory experiment on the best neutron spectrometer is not all. Once collected, the data analysis process raises some questions concerning the signal: what is the background signal ? What proportion of coherent and incoherent scattering has been measured ? Is is possible to identify clearly the purely elastic (structure) contribution from the quasi-elastic and inelastic one (dynamics) ? What are the contributions from the sample geometry, the container, the sample environment, and generally the instrument itself ? And last but not least, how does multiple scattering affect the signal ? Most of the time, the physicist will elude these questions using rough approximations, or applying analytical corrections \cite{Copley86}. Monte-Carlo techniques provide a mean to evaluate some of these quantities.
+
+\section{Neutron spectrometer simulations}
+
+Neutron scattering instruments are built as a series of neutron optics elements. Each of these elements modifies the beam characteristics (divergence, wavelength spread, spatial and time distributions, ...) in a way which may be modeled through analytical methods, for simplified neutron beam configurations.
+This stands for individual elements such as guides \cite{Leibnitz63,Mildner90}, choppers \cite{Lowde60,Copley03}, Fermi choppers \cite{Fermi47,Peters05}, velocity selectros \cite{Clark66}, monochromators \cite{Freund83,Sears97,Shirane02,Alianelli04}, and detectors \cite{Radeka74,Charpak89,Manzin04}.
+In the case of selected neutron instrument parts, one may use efficiently the so-called acceptance diagram theory \cite{Mildner90,Copley93,Cussen03} within which the neutron beam distributions are considered to be homogeneous or gaussian.
+But the concatenation of a high number of neutron optics, which indeed constitute real instruments, brings additional complexity by introducing strong correlations between neutron beam parameters: divergence and position - which is the basis of the acceptance diagram method - but also wavelength and time. The usual analytical methods (phase-space theory...) then reach their limit of validity in the description of the resulting fine effects.
+
+In principle, computing individual neutron event propagation at each instrument part, using analytical and numerical models as cited before, is not such a hard task. The use of probablilities is common to describe microscopic physical processes. Integrating all these events over the propagation path will result in an estimation of measurable quantities characterizing the neutron instrument. More over, using variance reduction ({\it e.g.} importance sampling), whenever possible, will both speed-up the computation and achieve a better accuracy. What we just sketched is nothing else than the basis of the Monte-Carlo (MC) method \cite{James80}, applied to neutron ray-tracing instrumentation.
+
+Mathematically, the Monte-Carlo method is an application of the law of large numbers \cite{James80,Grimmett92}. Let $f(u)$ be a finite continuous integrable function of parameter $u$ for which an integral estimate is desirable. The discrete statistical mean value of $f$ (computed as a series) in the uniformly sampled interval $a < u < b$ converges to the mathematical mean value of $f$ over the same interval.
+
+\begin{equation}
+\lim_{n \rightarrow \infty} \frac{1}{n} \sum_{i=1, a \leq u_i \leq b}^n f(u_i) = \frac{1}{b-a}\int_a^b f(u) du
+\end{equation}
+
+In the case were the $u_i$ values are regularly sampled, we come to the well known midpoint integration rule. In the case were the $u_i$ values are randomly (but regularly) sampled, this is the Monte-Carlo integration technique. As random generators are not perfect, we rather talk about \emph{quasi}-Monte-Carlo technique.
+
+Eventhough early implementations of the method used {\emph home-made} computer programs  (see e.g. papers by J.R.D. Copley, D.F.R. Mildner, J.M. Carpenter, J. Cook), more general packages have been designed, providing models for most parts of the simulations.
+These present existing packages are: NISP \cite{NISP}, ResTrax \cite{Restrax}, McStas \cite{nn_10_20,mcstas_pb,mcstas_webpage}, Vitess \cite{Vitess,vitess_webpage}, and IDEAS \cite{IDEAS}.
+Their usage usually covers all types of neutron spectrometers, most of the time through a user-friendly graphical interface, without requiring programming skills.
+
+The neutron ray-tracing Monte-Carlo method has been used widely for e.g. guide studies \cite{Copley93,Farhi02,Schanzer04}, instrument optimization and design \cite{Zsigmond04,Lieutenant05}. Most of the time, the conclusions and general behaviour of such studies may be obtained using the classical analytical approaches, but accurate estimates for the flux, the resolutions and generally the optimum parameter set, benefit advantageously from MC methods.
+
 \section{The neutron weight, $p$}
 \label{s:probweight}
 A totally realistic semi-classical simulation will require that
@@ -24,7 +55,7 @@ with neutrons that get lost.
 An important way of speeding up calculations is to introduce
 a neutron weight for each simulated neutron and to
 adjust this weight according to the path of the neutron.
-If {\em e.g.}\ the reflectivity of a certain 
+If {\em e.g.}\ the reflectivity of a certain
 optical component is 10\%, and only reflected neutrons are
 considered in the simulations, the neutron
 weight will be multiplied by 0.10 when passing this component,
@@ -34,7 +65,7 @@ would require in average ten incoming neutrons for each reflected one.
 
 Let the initial neutron weight be $p_0$ and let us denote the weight
 multiplication factor in the $j$'th component by $\pi_j$.  The resulting
-weight factor for the neutron after passage of the whole instrument is 
+weight factor for the neutron after passage of the whole instrument is
 equal to the product of all the contributions
 \begin{equation}
 \label{e:probprod}
@@ -59,8 +90,8 @@ whenever possible. This includes
 
 In a typical simulation, the result will consist of a
 count of neutrons with different weights.\footnote{The
-sum of these weights is an estimate of 
-the mean number of neutrons hitting the monitor 
+sum of these weights is an estimate of
+the mean number of neutrons hitting the monitor
 (or detector) in a ``real'' experiment
 where the number of neutrons emitted from the source
 is the same as the number of simulated neutrons.}
@@ -71,17 +102,17 @@ I = \sum_i p_i = N \overline{p} ,
 \end{equation}
 where $N$ is the number of neutrons in the detector and the vertical bar denote
 averaging.
-By performing the weight transformations, the (statistical) 
+By performing the weight transformations, the (statistical)
 mean value of $I$ is unchanged.
-However, $N$ will in general be enhanced, 
+However, $N$ will in general be enhanced,
 and this will improve the statistics of the simulation.
 
 To give some estimate of the statistical error, we proceed as follows:
 Let us first for simplicity assume that all the counted neutron weights are
-almost equal, $p_i \approx \overline{p}$, 
+almost equal, $p_i \approx \overline{p}$,
 and that we observe a large number of neutrons, $N \geq 10$.
 Then $N$ almost follows a normal distribution
-with the uncertainty $\sigma(N) = \sqrt{N}$ 
+with the uncertainty $\sigma(N) = \sqrt{N}$
 \footnote{This is not correct in a
 situation where the detector counts a large fraction of the
 neutrons in the simulation, but we will neglect that for now.}.
@@ -113,13 +144,13 @@ The resulting variance then reads
 \begin{equation}
 \sigma^2(I) = \frac{N}{N-1} \left( \sum_i p_i^2 - \overline{p}^2  \right) .
 \end{equation}
-For large values of $N$, this is very well approximated 
-by the simple expression 
+For large values of $N$, this is very well approximated
+by the simple expression
 \begin{equation}
 \sigma^2(I) \approx \sum_i p_i^2 .
 \end{equation}
 
-In order to compute the intensities and uncertainties, the detector components 
+In order to compute the intensities and uncertainties, the detector components
 in \MCS\ thus must keep track of
 $N=\sum_i p_i^0, I=\sum_i p_i^1$, and $M_2 = \sum_i p_i^2$.
 
@@ -148,19 +179,19 @@ by a factor $\pi_j$ (in this case: $j=1$) so that
 f_{\rm MC}(E,\Ombold,{\bf r}) \pi_j(E,\Ombold,{\bf r})
  = \Pi(E,\Ombold,{\bf r}) .
 \end{equation}
-For the sources present in version \version, 
+For the sources present in version \version,
 only the $(\Ombold, {\bf r})$ dependence of the correction factors
 are taken into account.
 
 The weight factor transformation rule Eq.~(\ref{probrule})
 is of course also valid for other types of Monte Carlo choices,
-although the probability distributions may depend upon 
-different parameters. An important example 
+although the probability distributions may depend upon
+different parameters. An important example
 is elastic scattering from a powder sample,
 where the Monte-Carlo choices are the scattering position
 and the final neutron direction.
 
-It should be noted that the $\pi_j$'s found in the weight factor 
+It should be noted that the $\pi_j$'s found in the weight factor
 transformation are multiplied by the $\pi_j$'s found by the
 weight adjustments described in
 subsection \ref{s:probweight} to yield the final neutron
@@ -174,17 +205,17 @@ In general, only neutrons flying in some of these directions will
 stand any chance of being detected. These directions we call
 the {\em interesting directions}.
 The idea in focusing is to avoid wasting computation time on
-neutrons scattered in the uninteresting directions. 
+neutrons scattered in the uninteresting directions.
 This trick is an instance of what in Monte Carlo terminology
 is known as {\em importance sampling}. % \cite{importance}.
 
-If {\em e.g.} a sample scatters isotropically 
+If {\em e.g.} a sample scatters isotropically
 over the whole $4\pi$ solid angle, and all interesting
-directions are known to be contained within a certain 
-solid angle interval $\Delta \Ombold$, only these solid angles 
-are used for the Monte Carlo choice of scattering direction. 
+directions are known to be contained within a certain
+solid angle interval $\Delta \Ombold$, only these solid angles
+are used for the Monte Carlo choice of scattering direction.
 According to Eq.~(\ref{probrule}), the weight factor will then have
-to be changed by the (fixed) amount 
+to be changed by the (fixed) amount
 $\pi_j = |\Delta \Ombold| / (4 \pi)$.
 One thus ensures that the mean simulated intensity is unchanged
 during a "correct" focusing, while a too narrow focusing will
@@ -192,13 +223,13 @@ result in a lower (\textit{i.e.} wrong) intensity, since one cuts
 away neutrons that would otherwise have counted.
 
 One could also think of using adaptive importance sampling, % \cite{importance},
-so that \MCS\ during the simulations will determine 
-the most interesting directions and gradually change 
+so that \MCS\ during the simulations will determine
+the most interesting directions and gradually change
 the focusing according to that. A first implementation of this idea is
 found in the Source\_adapt component.%, described in section~\ref{s:Source_adapt}.
 
 \section{Transformation of random numbers}
-In order to perform the Monte Carlo choices, one needs to be able to 
+In order to perform the Monte Carlo choices, one needs to be able to
 pick a random number from a given distribution. However, most
 random number generators only give
 uniform distributions over a certain interval.
@@ -207,7 +238,7 @@ and we here give a short explanation on how to do this.
 
 Assume that we pick a random number, $x$, from a distribution $\phi(x)$.
 We are now interested in the shape of the distribution of the
-transformed $y=f(x)$, assuming $f(x)$ is monotonous. 
+transformed $y=f(x)$, assuming $f(x)$ is monotonous.
 All random numbers lying in the interval $[x; x+dx]$
 are transformed to lie within the interval $[y; y+f'(x)dx]$, so the
 resulting distribution must be $\phi(y) = \phi(x) / f'(x)$.
@@ -216,7 +247,7 @@ If the random number generator selects numbers uniformly in the interval
 $[0; 1]$, we have $\phi(x) = 1$, and
 one may evaluate the above expression further
 \begin{equation}
-\phi(y) = \frac{1}{f'(x)} = \frac{d}{dy} f^{-1}(y) . 
+\phi(y) = \frac{1}{f'(x)} = \frac{d}{dy} f^{-1}(y) .
 \end{equation}
 By indefinite integration we reach
 \begin{equation}
@@ -226,13 +257,13 @@ By indefinite integration we reach
 which is the essential formula for finding the right transformation
 of the initial random numbers.
 Let us illustrate with a few examples of transformations used within the
-\MCS\ components. 
+\MCS\ components.
 
 \paragraph{The circle}
 For finding a random point within the
 circle of radius $R$, one would like to choose the polar angle from a uniform
 distribution in $[0; 2\pi]$ and the radius from the normalised distribution
-$\phi(r)=2r/R^2$. 
+$\phi(r)=2r/R^2$.
 The polar angle is found simply by multiplying a random number
 with $2\pi$. For the radius, we like to find $r=f(x)$, where again $x$
 is the generated random number. Left side of Eq.~(\ref{e:randtrans}) gives
@@ -243,18 +274,18 @@ Hence $r = R\sqrt{x}$.
 \paragraph{Exponential decay}
 In a simple time-of-flight source, the neutron flux decays exponentially
 after the initial activation at $t=0$. We thus want to pick an initial
-neutron emission time from the normalised distribution 
+neutron emission time from the normalised distribution
 $\phi(t) = \exp(-t/\tau) / \tau$.
 Use of Eq.~(\ref{e:randtrans}) gives
 $x = - \exp(-t/\tau)$, which is a number in the interval $[-1; 0]$.
-If we want to pick a positive random number instead, we will have 
-to change sign by $x_1 = -x$ and thus reach $t = - \tau \ln (x_1)$. 
+If we want to pick a positive random number instead, we will have
+to change sign by $x_1 = -x$ and thus reach $t = - \tau \ln (x_1)$.
 
 
 \paragraph{The sphere}
-For finding a random point on the surface of the unit sphere, 
-one needs to determine the two angles, $(\theta, \psi)$. 
+For finding a random point on the surface of the unit sphere,
+one needs to determine the two angles, $(\theta, \psi)$.
 As for a circle, $\psi$ is chosen from a uniform distribution
 in $[0; 2\pi]$. The probability distribution of $\theta$ should be
-$\phi(\theta)=\sin(\theta)$ (for $\theta \in [0; \pi/2 ]$), 
+$\phi(\theta)=\sin(\theta)$ (for $\theta \in [0; \pi/2 ]$),
 whence $\theta=\cos^{-1}(x)$.
