--- a/trunk/tof_monitor.tex
+++ b/trunk/tof_monitor.tex
@@ -1,11 +1,11 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \section{TOF\_monitor: The time-of-flight monitor}
-\component{TOF\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $t_0$, $t_1$, filename}{$\Delta t$}
+\component{TOF\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $t_0$, $t_1$, filename}{$\Delta t$}{}
 
 The component {\bf TOF\_monitor} has a rectangular opening
 in the $x-y$ plane, given by the $x$ and $y$ parameters,
-like for {\rm Slit}. 
+like for {\rm Slit}.
 The neutron is propagated to the plane of the monitor
 by the kernel call PROP\_Z0.
 Any neutron ray that passes within the opening is counted, and
@@ -14,13 +14,13 @@ the total neutron counts are updated:
 Special about {\bf TOF\_monitor} is that it is sensitive to
 the time, $t$, where the neutron ray is hits the component.
 Like in a real time-of-flight detector, the time dimension is
-binned into small time intervals. 
+binned into small time intervals.
 Hence this monitor updates a one-dimensional array of counts.
-The $n_{\rm chan}$ time intervals begin at $t_0$ and 
-end at $t_1$ (or have each length $dt$ if this parameter is specified). 
+The $n_{\rm chan}$ time intervals begin at $t_0$ and
+end at $t_1$ (or have each length $dt$ if this parameter is specified).
 As usual in time-of-flight analysis, all times are given in units of $\mu$s.
 
-The output parameters from {\bf TOF\_monitor} are the three count numbers, 
+The output parameters from {\bf TOF\_monitor} are the three count numbers,
 $N, I$, and $M_2$ for the total counts in the monitor.
 In addition a file is produced with a list of the same three data divided in
 different TOF bins.
