--- a/trunk/vanadium.tex
+++ b/trunk/vanadium.tex
@@ -4,16 +4,16 @@
 \section{V\_sample: An incoherent scatterer, the V-sample}
 \label{s:v_sample}
 
-\component{V\_sample}{System}{$r_{\rm i}$, $r_{\rm o}$, $h$, $r_{\rm foc}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$}{$w_x$, $h_y$, $t_z$, $w_{\rm focus}, h_{\rm focus}$, $w_{\rm foc, angle}$, $h_{\rm foc, angle}$, $\sigma_{\rm abs}$, $\sigma_{\rm inc}$, $V_0$, $f_{\rm pack}$, target\_index}
+\component{V\_sample}{System}{$r_{\rm i}$, $r_{\rm o}$, $h$, $r_{\rm foc}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$}{$w_x$, $h_y$, $t_z$, $w_{\rm focus}, h_{\rm focus}$, $w_{\rm foc, angle}$, $h_{\rm foc, angle}$, $\sigma_{\rm abs}$, $\sigma_{\rm inc}$, $V_0$, $f_{\rm pack}$, target\_index}{validated}
 
-A sample with incoherent scattering, e.g. vanadium, is frequently used for 
+A sample with incoherent scattering, e.g. vanadium, is frequently used for
 calibration purposes, as this gives an isotropic, elastically scattered beam.
 
 The component {\bf V\_sample}, shown in \ref{c:v-sample}
 has {\em only} absorption and incoherent scattering.
-For the sample geometry, we default use a 
+For the sample geometry, we default use a
 hollow cylinder (which has the solid cylinder as a limiting case).
-The sample dimensions are: Inner radius $r_{\rm i}$, 
+The sample dimensions are: Inner radius $r_{\rm i}$,
 outer radius $r_{\rm o}$, and height $h$, see figure \ref{f:v-sample}.
 \begin{figure}
   \begin{center}
@@ -27,9 +27,9 @@ outer radius $r_{\rm o}$, and height $h$, see figure \ref{f:v-sample}.
 \end{figure}
 
 When calculating the neutron path length within
-the cylinder, the kernel function 
+the cylinder, the kernel function
 \verb+CYLINDER_INTERSECT+
-is used twice, once for the outer radius and once 
+is used twice, once for the outer radius and once
 for the inner radius.
 
 The sample geometry can be made rectangular by specifying the width, $w_x$, the
@@ -39,32 +39,32 @@ The incoherent scattering gives
 a completely uniform angular distribution of the scattered
 neutrons from each nucleus: $\gamma(\Omega) = 1/4\pi$.
 For the focusing we choose to have a uniform distribution on
-a target sphere of radius $r_{\rm foc}$, at the position 
+a target sphere of radius $r_{\rm foc}$, at the position
 $(x_{\rm target},y_{\rm target},z_{\rm target})$
 in the local coordinate system.
 This gives an angular distribution (in a small angle approximation)
-of 
+of
 \begin{equation}
-g(\Omega) = \frac{1}{4\pi} 
+g(\Omega) = \frac{1}{4\pi}
   \frac{x_{\rm t}^2+y_{\rm t}^2+z_{\rm t}^2}{(\pi r_{\rm t}^2)}.
 \end{equation}
 
 The focusing can alternatively be performed on a rectangle with dimensions
-$w_{\rm focus}$, $h_{\rm focus}$, or uniformly in angular space 
-(in a small-angle approximation), 
+$w_{\rm focus}$, $h_{\rm focus}$, or uniformly in angular space
+(in a small-angle approximation),
 using $w_{\rm foc, angle}$, $h_{\rm foc, angle}$.
 The focusing location can be picked to be a downstream component by
 specifying \verb+target_index+.
 
 The incoherent and absorption cross sections for V are default
 for the component. For other choices, the
-parameters $\sigma_{\rm inc}$, $\sigma_{\rm abs}$, 
+parameters $\sigma_{\rm inc}$, $\sigma_{\rm abs}$,
 and the unit cell volume $V_0$ should be specified.
-For a loosely packed sample, also the packing factor, $f_{\rm pack}$ 
+For a loosely packed sample, also the packing factor, $f_{\rm pack}$
 can be specified (default value of 1).
 
-Note: When simulating a realistic incoherent hollow cylinder sample 
-one finds that  the resulting direction dependence 
+Note: When simulating a realistic incoherent hollow cylinder sample
+one finds that  the resulting direction dependence
 of the scattered intensity is {\em not} isotropic.
 This is explained by the variation of attenuation with
 scattering angle.
