--- a/trunk/virtual_input.tex
+++ b/trunk/virtual_input.tex
@@ -1,23 +1,20 @@
 \section{Vitual\_input: Starting the second part of a split simulation}
 \label{virtual_input}
 
-\component{Virtual\_input}{System}{filename}{buffer size, repeat count, type}
+\component{Virtual\_input}{System}{filename}{repeat count, type}{}
 
-The component {\bf Virtual\_input} resumes a split simulation where the 
+The component {\bf Virtual\_input} resumes a split simulation where the
 first part has been performed by another instrument and the neutron ray
 parameters have been stored by the component {\bf Virtual\_output}.
 
 All neutron ray parameters are read from the input file, which is by default
-of ``text'' type, but can also assume the binary formats 
-``float'' or ``double''. The reading of neutron rays continue until the 
-specified number of rays have been simulated or 
+of ``text'' type, but can also assume the binary formats
+``float'' or ``double''. The reading of neutron rays continue until the
+specified number of rays have been simulated or
 till the file has been exhausted. If desirable, the input file
 can be reused a number of times, determined by the optional parameter
-``repeat count''. However, care should be taken when dealing with 
-absolute intensities, which are automatically correct only
+``repeat count''. This is only relevant if you know that further part of the suimulation makes use of MC choices, else you will repeat exactly the same events all the way long. However, care should be taken when dealing with
+absolute intensities, which are automatically corrected only
 when the input file has been exhausted once.
 
-For performance reasons, it is possible to specify the size of 
-the buffer to use in reading the neutron rays from file. Default 
-is to buffer the whole file, but this may be fatal for very large
-input files.
+The simulation ends either with the end of the repeated file counts, or with the normal end with $ncount$ \MCS\ simulation events. We recommand to use a very large value, e.g. $ncount=1e10$ when launching simulations.
